--- a/css/first.css
+++ b/css/first.css
@@ -1,35 +1,53 @@
 nav{
-    width: 100%;
-    height: 50px;
-    background-color: skyblue;
+    display: flex;
+    background-color: black;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 #logo{
-    width: 100px;
-    height: 60px;
+    color: beige;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-top:10px ;
 }
-a{
-    float: right;
-    margin-right: 15px;
-    height: 45px;
-    line-height: 50px;
-    vertical-align:top;
+ul,li{
+    list-style: none;
+    padding: 0;
+}
+ul{
+    display: inline-flex;
+}
+
+nav a{
     text-decoration: none;
-    font-size: 20px;
-    color: snow;
+    color: blanchedalmond;
+    padding: 10px;
 }
-a:hover{
-    background-color: white;
-    border-radius: 5px;
-    padding: 1px;
-    color: thistle;
+nav a:hover{
+    color: burlywood;
+    cursor: pointer;
+    
+}
+
+div p{
+    width:500px;
+    height: 250px;
+    overflow: auto;
+    display: inline-flex;
+    margin-right: 100px;
+    background-color:cornsilk;
+    padding: 10px;
+}
+
+#para{
+    padding-left: 20px;
 }
 #img{
     width: 100%;
-    height: 20em;
-    margin-top: 5px;
+    height: 500px;
+    margin-top: 10px;
 }
 #head{
-    color: teal;
+    color: springgreen;
     text-align: center;
 }
