--- a/css/second.css
+++ b/css/second.css
@@ -1,22 +1,76 @@
-body {
-    font-family: sans-serif;
-    font-size: 16px;
-}
-nav {
-    background:tan;
-    padding: 0 15px;
+nav{
+    display: flex;
+    background-color: black;
+    flex-direction: row;
+
 }
 
-.menu{
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items:center;
+/*#logo{
+    color: beige;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-top:10px ;
 }
-li a {
-    color: white;
+*/
+ul,li{
+    list-style: none;
+    padding: 0;
+    
+}
+ul{
+    display: inline-flex;
+}
+
+nav a{
     text-decoration: none;
+    color: blanchedalmond;
+    padding: 10px;
+}
+nav a:hover{
+    color: burlywood;
+    cursor: pointer;
+    
+}
+/*div{
+    display: flex;
+    justify-content: space-evenly;
+}
+*/
+/*div p{
+    width:500px;
+    height: 250px;
+    overflow: auto;
+    margin-right: 100px;
+    background-color:cornsilk;
+    padding: 10px;
+}
+*/
+p{
     display: block;
-    padding: 10px 5px;
+}
+p:hover{
+    background-color: cornsilk;
+}
+#para{
+    padding-left: 20px;
+}
+#img{
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+}
+#img2{
+    width: 500px;
+    position: absolute;
+      top: 350px;
+      left: 20px;
+}
+#head{
+    color: springgreen;
+    text-align: center;
+}
+h1{
+    text-align: center;
+    width: 50%;
+    margin-left: 330px;
+    color: palegoldenrod;
 }
