--- a/css/third.css
+++ b/css/third.css
@@ -1,44 +1,71 @@
-h1{
-    color: red;
-    text-align: center;
+body{
+    background-color: peachpuff;
 }
-h2{
-    text-align: center;
-    color: orange;
-}
-h3{
-    text-align: center;
-    color:yellow;
-}
-
-p{
-    background-color:turquoise;
-    text-align: center;
-    font-size: 50px;;
-}
-body {
-    font-family: sans-serif;
-    font-size: 16px;
-}
-nav {
-    padding: 0 15px;
-}
-
-.container{
-    list-style-type: none;
+nav{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items:center;
+    flex-direction: row;
+    justify-content: space-around;
 }
-li a {
-    color:thistle;
+
+
+nav ul,nav li{
+    list-style: none;
+    padding: 0;
+}
+nav ul{
+    display: inline-flex;
+}
+
+nav a{
     text-decoration: none;
-    display: block;
-    padding: 10px 5px;
+    color:teal;
+    padding: 10px;
 }
-a:hover{
-    background-color: wheat;
-    color: tomato;
+nav a:hover{
+    color: black;
+    cursor: pointer;
     
+}
+
+/*div p{
+    width:500px;
+    height: 250px;
+    overflow: auto;
+    display: inline-flex;
+    margin-right: 100px;
+    background-color:cornsilk;
+    padding: 10px;
+}
+*/
+div{
+    display: inline-block;
+}
+div ul{
+    list-style: none;
+}
+div li{
+    margin: 30px;
+    margin-left: 300px;
+}
+#para{
+    padding-left: 20px;
+}
+#img{
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+}
+#head{
+    color: springgreen;
+    text-align: center;
+}
+#name{
+    text-align: center;
+}
+#last, h2,h3{
+    color:white;
+    text-align: center;
+}
+#end{
+    text-align: center;
 }
